change fa icons

--- a/index.html
+++ b/index.html
@@ -132,32 +132,32 @@
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
+									<span class="icon alt major fa-cubes"></span>
 									<h3>Decentralized</h3>
 									<p>The Internet has lead to the democratization of knowledge and an accelerator of innovation. 
 										Unfortunately, it is increasing under threat of monopolization.  
 										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
+									<span class="icon alt major fa-line=chart"></span>
 									<h3>Learning Marketplace</h3>
 									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
+									<span class="icon alt major fa-bank"></span>
 									<h3>Unbreakable</h3>
 									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
 										iFab provides resilient access to AI, that works even with low latency or poor connectivity.
 									</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
+									<span class="icon alt major fa-flask"></span>
 									<h3>Future Proof</h3>
 									<p>Deep Learning research is growing exponentially and the breakthroughs are increasing at an astonishing rate.  
 										We keep abreast of the cutting edge developments and will integrate the most promising discoveries in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
+									<span class="icon alt major fa-thumbs-o-up"></span>
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
 										iFab is based on an "Architecture of Participation" that ensures frictionless participation and contribution 
@@ -165,7 +165,7 @@
 									</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
+									<span class="icon alt major fa-low-vision"></span>
 									<h3>Privacy</h3>
 									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.</p>
 								</section>
