--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-cubes"></span>
+									<span class="icon alt major fa-universal-access"></span>
 									<h3>Decentralized</h3>
 									<p>The Internet has lead to the democratization of knowledge and an accelerator of innovation. 
 										Unfortunately, it is increasing under threat of monopolization.  
@@ -144,7 +144,7 @@
 									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-bank"></span>
+									<span class="icon alt major fa-diamond"></span>
 									<h3>Unbreakable</h3>
 									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
 										iFab provides resilient access to AI, that works even with low latency or poor connectivity.
@@ -157,7 +157,7 @@
 										We keep abreast of the cutting edge developments and will integrate the most promising discoveries in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-thumbs-o-up"></span>
+									<span class="icon alt major fa-id-card-o"></span>
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
 										iFab is based on an "Architecture of Participation" that ensures frictionless participation and contribution 
