fix marketplace icon

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-line=chart"></span>
+									<span class="icon alt major fa-line-chart"></span>
 									<h3>Learning Marketplace</h3>
 									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
