--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
 										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-line-chart"></span>
+									<span class="icon alt major fa-bar-chart"></span>
 									<h3>Learning Marketplace</h3>
 									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-diamond"></span>
+									<span class="icon alt major fa-bank"></span>
 									<h3>Unbreakable</h3>
 									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
 										iFab provides resilient access to AI, that works even with low latency or poor connectivity.
