--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-bar-chart"></span>
+									<span class="icon alt major fa-line-chart"></span>
 									<h3>Learning Marketplace</h3>
 									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
@@ -157,7 +157,7 @@
 										We keep abreast of the cutting edge developments and will integrate the most promising discoveries in Deep Learning.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-id-card-o"></span>
+									<span class="icon alt major fa-thumbs-up"></span>
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
 										iFab is based on an "Architecture of Participation" that ensures frictionless participation and contribution 
