update order of text

--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 									<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" according to Ray Kurzweil.</p>	
 								</div>
 								<div class="4u$ 12u$(medium)">
-										<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
-											— Mark Cuban
-										</p>
+										
 								</div>
 							</div>
 						</div>
@@ -92,8 +90,10 @@
 					<span class="image fit main"><img src="images/person-detect.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Open and Decentralized Fabric</h2>
-							<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
+							<h2>Deep Learning is Disruptive AI</h2>
+							<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
+											— Mark Cuban
+										</p>
 						</header>
 						<p></p>
 						<ul class="actions">
@@ -108,9 +108,9 @@
 					<span class="image fit main bottom"><img src="images/fingerprint.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Deep Learning and Blockchain</h2>
-							<p>Decentralized super-human narrow intelligence on a global network infrastructure.</p>
-						</header>
+							<h2>The Fusion of Deep Learning and Ethereum</h2>
+							<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
+							</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
