update some text

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Monopolization of AI Leads to Greater Economic Inequality</h2>
-											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" - Ray Kurzweil.</p>	
+										<h2>Monopolization of AI will lead to Greater Economic Inequality</h2>
+											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" - Ray Kurzweil</p>	
 										
 									</header>
 								</div>
@@ -125,7 +125,7 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Artificial Intelligence for the Marginalized 99%</h2>
+							<h2>Artificial Intelligence for the Eventually Marginalized 99%</h2>
 							<p>We are the 99%. </p>
 						
 
