--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<div class="content">
 						<header>
 							<h2>Deep Learning is Disruptive AI</h2>
-							<p>"Artificial Intelligence, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
+							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
 											— Mark Cuban
 										</p>
 						</header>
@@ -125,7 +125,7 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Artificial Intelligence for the Eventually Marginalized 99%</h2>
+							<h2>AI for the Eventually Marginalized 99%</h2>
 							<p>We are the 99%. </p>
 						
 
@@ -170,6 +170,7 @@
 									<span class="icon alt major fa-low-vision"></span>
 									<h3>Privacy</h3>
 									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.</p>
+									<p>We should not need to trade away our privacy for the right to personalized AI.</p>
 								</section>
 							</div>
 						</div>
@@ -185,7 +186,7 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Join the Deep Learning Revolution!</h2>
+							<h2>Join the Deep Learning AI Revolution!</h2>
 							<p>Submit your email to begin your road to AI privacy and freedom.</p>
 						</header>
 						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
