--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-universal-access"></span>
-									<h3>Decentralized</h3>
+									<h3>Democratized</h3>
 									<p>The Internet has lead to the democratization of knowledge and an accelerator of innovation. 
 										Unfortunately, it is increasing under threat of monopolization.  
-										iFab purpose goes a step further by introducing a framework for the democratization of AI.</p>
+										iFab purpose goes a step further by introducing a framework for the democratization of AI.
+										
+										</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-line-chart"></span>
@@ -169,8 +171,8 @@
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-low-vision"></span>
 									<h3>Privacy</h3>
-									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.</p>
-									<p>We should not need to trade away our privacy for the right to personalized AI.</p>
+									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.
+									We should not need to trade away our privacy for the right to personalized AI.</p>
 								</section>
 							</div>
 						</div>
