add sergey's comments

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 					<div class="content">
 						<header>
 							<h2>Deep Learning is Disruptive AI</h2>
-							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
-											— Mark Cuban
-										</p>
+							<p>“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there" - Sergey Brin</p>
+							
 						</header>
 						<p></p>
 						<ul class="actions">
@@ -111,9 +110,11 @@
 					<div class="content">
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
-							<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
+							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
+											— Mark Cuban
+										</p>
 							</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
