--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 					<div class="content">
 						<header>
 							<h2>Intuition Fabric<sup>&trade;</sup></h2>
-							<p>Democratized Deep Learning Artificial Intelligence</p>
-							<p> on the Decentralized Ethereum Blockchain.</p>
+							<p>Democratized Deep Learning Artificial Intelligence
+							on the Decentralized Ethereum Blockchain.</p>
+							<a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a>
+							<a href="$" class="button">Access the Demo</a>
 						</header>
 						<span class="image"><img src="images/head-shot.jpg" alt="" /></span>
 					</div>
