--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@
 					<div class="content">
 						<header>
 							<h2>Intuition Fabric<sup>&trade;</sup></h2>
-							<p>Democratized Deep Learning Artificial Intelligence
+							<p>Democratized Deep Learning Artificial Intelligence<br/>
 							on the Decentralized Ethereum Blockchain.</p>
-							<a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a>
-							<a href="$" class="button">Access the Demo</a>
+
+							<ul class="actions">
+							  <li><a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a></li>
+							  <li><a href="#" class="button">Access the Demo</a></li>
+							</ul>
 						</header>
 						<span class="image"><img src="images/head-shot.jpg" alt="" /></span>
 					</div>
