--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							  <li><a href="#" class="button">Access the Demo</a></li>
 							</ul>
 						</header>
-						<span class="image"><img src="images/head-shot.jpg" alt="" /></span>
+						<span class="image"><img src="images/intuitionfabric.gif" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -170,7 +170,7 @@
 									<span class="icon alt major fa-thumbs-up"></span>
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
-										iFab is based on an "Architecture of Participation" that ensures frictionless participation and contribution 
+										iFab is based on an "Architecture of Participation" that encourages frictionless participation and contribution 
 										to the marketplace.
 									</p>
 								</section>
@@ -195,7 +195,7 @@
 					<div class="container">
 						<header>
 							<h2>Join the Deep Learning AI Revolution!</h2>
-							<p>Submit your email to begin your road to AI privacy and freedom.</p>
+							<p>Submit your email to begin your road to AI privacy and enablement.</p>
 						</header>
 						<form method="post" action="https://formspree.io/info@intuitionmachine.com" class="container 50%">
 							<div class="row uniform 50%">
