change image shape

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							  <li><a href="#" class="button">Access the Demo</a></li>
 							</ul>
 						</header>
-						<span class="image"><img src="images/intuitionfabric.gif" alt="" /></span>
+						<img src="images/intuitionfabric.gif" alt="" />
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
