use logo replacing text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Intuition Fabric<sup>&trade;</sup></h2>
+							<h2><img src="images/intuitionfabric.gif" alt="" /></h2>
 							<p>Democratized Deep Learning Artificial Intelligence<br/>
 							on the Decentralized Ethereum Blockchain.</p>
 
@@ -59,7 +59,7 @@
 							  <li><a href="#" class="button">Access the Demo</a></li>
 							</ul>
 						</header>
-						<img src="images/intuitionfabric.gif" alt="" />
+						
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
