--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/business-control.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/bulb_break.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
