--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/person-detect.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/neurons.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Deep Learning is Disruptive AI</h2>
@@ -111,7 +111,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/fingerprint.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/blackboardjpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
