--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/blackboardjpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/blackboard.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
