--- a/disruptive.html
+++ b/disruptive.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Landed by HTML5 UP</title>
+		<title>Intuition Fabric (iFab): Disruption</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,10 +19,11 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Intuition Fabric<small>&trade;</small></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
+							<!--
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
@@ -42,6 +43,7 @@
 							</li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
+							-->
 						</ul>
 					</nav>
 				</header>
@@ -50,7 +52,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Right Sidebar</h2>
+							<h2>Disruptive</h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 						<div class="row 150%">
