--- a/index.html
+++ b/index.html
@@ -116,7 +116,24 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/blackboard.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/blackchain.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Architecture of Participation through Blockchain technology</h2>
+							<p>some quote goes here
+										</p>
+							</header>
+						<p>some remark goes here</p>
+						<ul class="actions">
+							<li><a href="fusion.html" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+
+				<!-- Two -->
+				<section id="twotwo" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/blackboard.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
@@ -129,8 +146,9 @@
 							<li><a href="fusion.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
+
 
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
