--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/blackchain.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/blockchain.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Architecture of Participation through Blockchain technology</h2>
