--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							</header>
 						<p>some remark goes here</p>
 						<ul class="actions">
-							<li><a href="fusion.html" class="button">Learn More</a></li>
+							<li><a href="blockchain.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
