--- a/fusion.html
+++ b/fusion.html
@@ -52,7 +52,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Disruptive</h2>
+							<h2>Fusion</h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 						<div class="row 150%">
