update blockchain image

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/blockchain.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/blockchain2.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Architecture of Participation through Blockchain technology</h2>
@@ -136,7 +136,7 @@
 					<span class="image fit main"><img src="images/blackboard.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>The Fusion of Deep Learning and Ethereum</h2>
+							<h2>2The Fusion of Deep Learning and Ethereum</h2>
 							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
 											— Mark Cuban
 										</p>
