update blockchain text

--- a/index.html
+++ b/index.html
@@ -120,10 +120,12 @@
 					<div class="content">
 						<header>
 							<h2>Architecture of Participation through Blockchain technology</h2>
-							<p>some quote goes here
+							<p>"Virgin Galactic is a bold entrepreneurial technology. It’s driving a revolution and Bitcoin is doing just the same when it comes to inventing a new currency.”
+								- Sir Richard Branson
 										</p>
 							</header>
-						<p>some remark goes here</p>
+						<p>Intuition Fabric™ is built on Ethereum, a decentralized blockchain network similar to the Bitcoin.
+							  Ethereum’s smart contract capability enables the creation of an incentivized system that aligns participants with goals of the Intuition Fabric™ product</p>
 						<ul class="actions">
 							<li><a href="blockchain.html" class="button">Learn More</a></li>
 						</ul>
