--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								- Sir Richard Branson
 										</p>
 							</header>
-						<p>Intuition Fabric™ is built on Ethereum, a decentralized blockchain network similar to the Bitcoin.
+						<p>Intuition Fabric™ is built on Ethereum, a decentralized blockchain network similar to Bitcoin.
 							  Ethereum’s smart contract capability enables the creation of an incentivized system that aligns participants with goals of the Intuition Fabric™ product</p>
 						<ul class="actions">
 							<li><a href="blockchain.html" class="button">Learn More</a></li>
@@ -138,12 +138,12 @@
 					<span class="image fit main"><img src="images/blackboard.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>2The Fusion of Deep Learning and Ethereum</h2>
+							<h2>The Fusion of Deep Learning and Ethereum</h2>
 							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
 											— Mark Cuban
 										</p>
 							</header>
-						<p>Intuition Fabric (iFab) is a learning marketplace that amplifies the intelligence of its participants.</p>
+						<p>Intuition Fabric™ is a learning marketplace that amplifies the intelligence of its participants.</p>
 						<ul class="actions">
 							<li><a href="fusion.html" class="button">Learn More</a></li>
 						</ul>
