--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>Monopolization of AI will lead to Greater Economic Inequality</h2>
-											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people" - Ray Kurzweil</p>	
+											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people"<br/>
+											 - Ray Kurzweil, Author of 'The Singularity is Near'</p>	
 										<ul class="actions">
 											<li><a href="inequality.html" class="button">Learn More</a></li>
 										</ul>
@@ -103,7 +104,8 @@
 					<div class="content">
 						<header>
 							<h2>Deep Learning is Disruptive AI</h2>
-							<p>“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there" - Sergey Brin</p>
+							<p>“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there"<br/>
+							 - Sergey Brin, Cofounder of Google</p>
 							
 						</header>
 						<p></p>
@@ -120,8 +122,8 @@
 					<div class="content">
 						<header>
 							<h2>Architecture of Participation through Blockchain technology</h2>
-							<p>"Virgin Galactic is a bold entrepreneurial technology. It’s driving a revolution and Bitcoin is doing just the same when it comes to inventing a new currency.”
-								- Sir Richard Branson
+							<p>"I’m reasonably confident … that the blockchain will change a great deal of financial practice and exchange”<br/>
+								- Larry Summers, Former US Treasury Secretary
 										</p>
 							</header>
 						<p>Intuition Fabric™ is built on Ethereum, a decentralized blockchain network similar to Bitcoin.
@@ -140,7 +142,7 @@
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
 							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
-											— Mark Cuban
+								<br/>			— Mark Cuban, Billionaire Entrepreneur
 										</p>
 							</header>
 						<p>Intuition Fabric™ is a learning marketplace that amplifies the intelligence of its participants.</p>
