--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								</div>
 								<div class="4u 12u$(medium)">
 									<p>Automation and our society's relentless drive towards increasing efficiencies is leading to the destruction of our work and our means of livelihood.</p>
-									<p>Deep Learning is an extremely promising and disruptive AI technology that is increasingly being monopolized by the very few.
+									<p>Deep Learning is an extremely disruptive AI technology that is increasingly being monopolized by the very few.
 										Giant technology companies are cornering the market for talent, resources and eventually future economic rewards.</p>
 								
 								</div>
@@ -121,7 +121,7 @@
 					<span class="image fit main bottom"><img src="images/blockchain2.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Architecture of Participation through Blockchain technology</h2>
+							<h2>Architecture of Participation enabled by Blockchain</h2>
 							<p>"I’m reasonably confident … that the blockchain will change a great deal of financial practice and exchange”<br/>
 								- Larry Summers, Former US Treasury Secretary
 										</p>
@@ -197,7 +197,7 @@
 									<span class="icon alt major fa-thumbs-up"></span>
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
-										iFab is based on an "Architecture of Participation" that encourages frictionless participation and contribution 
+										Intuition Fabric™ is based on an "Architecture of Participation" that encourages frictionless participation and contribution 
 										to the marketplace.
 									</p>
 								</section>
