--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Intuition Fabric (iFab)</title>
+		<title>Intuition Fabric (Intuition Fabric™)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -171,20 +171,20 @@
 									<h3>Democratized</h3>
 									<p>The Internet has lead to the democratization of knowledge and an accelerator of innovation. 
 										Unfortunately, it is increasing under threat of monopolization.  
-										iFab purpose goes a step further by introducing a framework for the democratization of AI.
+										Intuition Fabric™ purpose goes a step further by introducing a framework for the democratization of AI.
 										
 										</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-line-chart"></span>
-									<h3>Learning Marketplace</h3>
-									<p>iFab is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
+									<h3>Learning Platform</h3>
+									<p>Intuition Fabric™is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-bank"></span>
 									<h3>Unbreakable</h3>
 									<p>Based on Peer to Peer (P2P) that prevents our AI rights from being taken away.  
-										iFab provides resilient access to AI, that works even with low latency or poor connectivity.
+										Intuition Fabric™ provides resilient access to AI, that works even with low latency or poor connectivity.
 									</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
@@ -198,14 +198,15 @@
 									<h3>Reputation</h3>
 									<p>Participants are compensated for their contributions through a blockchain secured reputation system.  
 										Intuition Fabric™ is based on an "Architecture of Participation" that encourages frictionless participation and contribution 
-										to the marketplace.
+										to the exponential growth of the platform.
 									</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-low-vision"></span>
 									<h3>Privacy</h3>
 									<p>Decentralized and open AI ensure our privacy by shielding our personal data from monopolists.
-									We should not need to trade away our privacy for the right to personalized AI.</p>
+									We should not need to trade away our privacy for the right to personalized AI.  The most effective
+									approach to privacy against AI, is to use AI.</p>
 								</section>
 							</div>
 						</div>
@@ -245,7 +246,7 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (iFab) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (Intuition Fabric™) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
