--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Intuition Fabric (Intuition Fabric™)</title>
+		<title>Intuition Fabric™</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -74,7 +74,7 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Monopolization of AI will lead to Greater Economic Inequality</h2>
+										<h2>Monopolization of AI and Economic Inequality</h2>
 											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people"<br/>
 											 - Ray Kurzweil, Author of 'The Singularity is Near'</p>	
 										<ul class="actions">
@@ -103,7 +103,7 @@
 					<span class="image fit main"><img src="images/neurons.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Deep Learning is Disruptive AI</h2>
+							<h2>Disruption by Deep Learning AI</h2>
 							<p>“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there"<br/>
 							 - Sergey Brin, Cofounder of Google</p>
 							
@@ -121,7 +121,7 @@
 					<span class="image fit main bottom"><img src="images/blockchain2.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Architecture of Participation enabled by Blockchain</h2>
+							<h2>Participation enabled by Blockchain</h2>
 							<p>"I’m reasonably confident … that the blockchain will change a great deal of financial practice and exchange”<br/>
 								- Larry Summers, Former US Treasury Secretary
 										</p>
@@ -178,7 +178,7 @@
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-line-chart"></span>
 									<h3>Learning Platform</h3>
-									<p>Intuition Fabric™is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
+									<p>Intuition Fabric™ is a unique marketplace where networking effects exponentially enhances both human and artificial intelligence.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-bank"></span>
