--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 								<div class="response" id="mce-error-response" style="display:none"></div>
 								<div class="response" id="mce-success-response" style="display:none"></div>
 							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_337316cb40ebf27ef1987bcb5_bfcbc26a21" tabindex="-1" value=""></div>
-							<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							<div class="8u 12u$(xsmall)"><input type="text" name="b_337316cb40ebf27ef1987bcb5_bfcbc26a21" tabindex="-1" value=""></div>
+							<div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 							</div>
 						</form>
 						</div>
