--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						</style>
 						<div id="mc_embed_signup">
 						<form action="//intuitionmachine.us14.list-manage.com/subscribe/post?u=337316cb40ebf27ef1987bcb5&amp;id=bfcbc26a21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							<div id="mc_embed_signup_scroll" class="row uniform 50%">>
+							<div id="mc_embed_signup_scroll" class="row uniform 50%">
 								<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 								<div class="mc-field-group">
 									<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
