--- a/index.html
+++ b/index.html
@@ -243,20 +243,15 @@
 						<div id="mc_embed_signup">
 						<form action="//intuitionmachine.us14.list-manage.com/subscribe/post?u=337316cb40ebf27ef1987bcb5&amp;id=bfcbc26a21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="row uniform 50%">
-								<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-								<div class="mc-field-group">
-									<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-								</label>
-								<div class="8u 12u$(xsmall)"><input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL"></div>
-							</div>
-							<div id="mce-responses" class="clear">
-								<div class="response" id="mce-error-response" style="display:none"></div>
-								<div class="response" id="mce-success-response" style="display:none"></div>
-							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							<div class="row uniform 50%">
-							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_337316cb40ebf27ef1987bcb5_bfcbc26a21" tabindex="-1" value=""></div>
-							<div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" name="subscribe" id="mc-embedded-subscribe" class="fit special"></div>
-							</div>
+								<div class="8u 12u$(xsmall)"><input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address"></div>
+							   
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_337316cb40ebf27ef1987bcb5_bfcbc26a21" tabindex="-1" value=""></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" name="subscribe" id="mc-embedded-subscribe" class="fit special"></div>
+								
 							</div>
 						</form>
 						</div>
