--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 						</form-->
 						<!-- Begin MailChimp Signup Form -->
 						<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-						<div id="mc_embed_signup"  class="container 50%">
-						<form action="//intuitionmachine.us14.list-manage.com/subscribe/post?u=337316cb40ebf27ef1987bcb5&amp;id=bfcbc26a21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup">
+						<form action="//intuitionmachine.us14.list-manage.com/subscribe/post?u=337316cb40ebf27ef1987bcb5&amp;id=bfcbc26a21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"  class="container 50%" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address"></div>
 							    <div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" name="subscribe" id="mc-embedded-subscribe" class="fit special"></div>
