--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						<div id="mc_embed_signup">
 						<form action="//intuitionmachine.us14.list-manage.com/subscribe/post?u=337316cb40ebf27ef1987bcb5&amp;id=bfcbc26a21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"  class="container 50%" target="_blank" novalidate>
 							<div id="mc_embed_signup_scroll" class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address"></div>
+								<div class="8u 12u$(xsmall)"><input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Your Email Address"></div>
 							    <div class="4u$ 12u$(xsmall)"><input type="submit" value="I want in!" name="subscribe" id="mc-embedded-subscribe" class="fit special"></div>
 								
 								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_337316cb40ebf27ef1987bcb5_bfcbc26a21" tabindex="-1" value=""></div>
