--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 							</div>
 								
 								<div id="mce-responses" class="clear">
-									<div class="response" id="mce-error-response" style="color:black,display:none"></div>
-									<div class="response" id="mce-success-response" style="color:black,display:none"></div>
+									<div class="response" id="mce-error-response" style="color:black;display:none"></div>
+									<div class="response" id="mce-success-response" style="color:black;display:none"></div>
 								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 								
 						</form>
