--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						<li><a href="mailto:info@intuitionmachine.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric (Intuition Fabric™) is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Intuition Machine Inc. All rights reserved.</li><li>Intuition Fabric™ is a product of <a href="http://www.intuitionmachine.com">Intuition Machine</a> Inc.</li><li>Disclaimers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
